--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="icon" href="./images/favicon.ico">
-    <link rel="icon" href="./images/favicon.svg">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/favicon.png"> 
     <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
     <meta name="description" content="Страница с советами для тех, кому сложно сосредоточиться"> 
   </head>
   <body class="page">
-
   <header class="header decorated-zone">
-    <span class="header__decor" aria-hidden="true">REC</span>
+    <span class="header__decor" aria-hidden="true"></span>
     <nav class="header__theme-menu">
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
@@ -53,109 +53,101 @@
       </span>  
     </p>
   </header>
-
   <main>
-    
-    <section class="section reasons">
-      <h2 class="reasons__title section-title">Почему сосредоточиться так сложно</h2>
-        <div class="reasons__block">
-          <h3 class="reasons__block_subtitle title-decor">Многозадачность</h3>
-            <p class="reasons__block_descr block-descr">
+    <section class="section">
+      <h2 class="section-title">Почему сосредоточиться так сложно</h2>
+        <div class="section__wrapper">
+          <article class="section__block">
+            <h3 class="title-decor title-decor-no-margin">Многозадачность</h3>
+            <p class="block-descr">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
               <a href="#" class="descr-link">выяснили</a>, 
               что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
-        </div>
-        <div class="reasons__block">
-          <h3 class="reasons__block_subtitle title-decor">Дофамин</h3>
-            <p class="reasons__block_descr block-descr">
+          </article>
+          <article class="section__block">
+            <h3 class="title-decor">Дофамин</h3>
+            <p class="block-descr">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
             </p>
+          </article>
         </div>
     </section>
-
-    <section class="section concentration">
-      <h2 class="concentration__title section-title">Что снижает концентрацию внимания?</h2>
-        <div class="concentration__block">
-          <h3 class="concentration__block_subtitle title-decor">Многозадачность</h3>
-            <p class="concentration__block_descr block-descr">
+    <section class="section section_column">
+      <h2 class="section-title">Что снижает концентрацию внимания?</h2>
+        <div class="section__wrapper">
+          <article class="section__block column">
+            <h3 class="title-decor">Многозадачность</h3>
+            <p class="block-descr">
               Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
-        </div>
-        <div class="concentration__block">
-          <h3 class="concentration__block_subtitle title-decor">Еда</h3>
-            <p class="concentration__block_descr block-descr">
+          </article>
+          <article class="section__block column">
+            <h3 class="title-decor">Еда</h3>
+            <p class="block-descr">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
-        </div>
-        <div class="concentration__block">
-          <h3 class="concentration__block_subtitle title-decor">Гаджеты</h3>
-            <p class="concentration__block_descr block-descr">
+          </article>
+          <article class="section__block column">
+            <h3 class="title-decor">Гаджеты</h3>
+            <p class="block-descr">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
+          </article>
         </div>
     </section>
-
-    <section class="section adviсe">
-      <h2 class="adviсe__title section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <div class="adviсe__block">
-          <h3 class="adviсe__subtitle title-decor">5 простых (на самом деле не очень) советов</h3>
+    <section class="section">
+      <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <div class="section__wrapper">
+        <h3 class="title-decor title-decor-no-margin">5 простых (на самом деле не очень) советов</h3>
+        <article class="section__block">
           <h4 class="title-decor title-decor-normal">Представьте небо и облака</h4>
-            <p class="adviсe__block_descr block-descr">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
-            </p>
-        </div>
-        <div class="adviсe__block">
+          <p class="block-descr">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+          </p>
+        </article>
+        <article class="section__block">
           <h4 class="title-decor title-decor-normal">Включите музыку</h4>
-            <p class="adviсe__block_descr block-descr">
-              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-            </p>
-        </div>
-        <div class="adviсe__block">
+          <p class="block-descr">
+            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </article>
+        <article class="section__block">
           <h4 class="title-decor title-decor-normal">Прогуляйтесь</h4>
-            <p class="adviсe__block_descr block-descr">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
-              <a href="#" class="descr-link">показал</a>,
-               что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-            </p>
-        </div>
-        <div class="adviсe__block">
+          <p class="block-descr">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
+            <a href="#" class="descr-link">показал</a>,
+             что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </article>
+        <article class="section__block">
           <h4 class="title-decor title-decor-normal">Хорошо ешьте</h4>
-            <p class="adviсe__block_descr block-descr">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-            </p>
-        </div>
-        <div class="adviсe__block">
+          <p class="block-descr">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </article>
+        <article class="section__block">
           <h4 class="title-decor title-decor-normal">Читайте</h4>
-            <p class="adviсe__block_descr block-descr">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
-            </p>
-        </div>
+          <p class="block-descr">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+          </p>
+        </article>
+      </div>
     </section>
-
     <section class="section galery">
-      <h3 class="galery__subtitle title-decor">А можно в картинках?</h3>
-        <div class="galery__wrapper">
-
-            <img src="images/sunset.png" srcset="images/sunset-1x.png 1x, images/sunset-2x.png 2x, images/sunset-3x.png 3x" class="galery__img sunset" alt="Нарисованное изображение с водной гладью, за ней виднеются горы и восходящее солнце" loading="lazy">
-
-            <img src="images/ice-cream.png" srcset="images/ice-cream-1x.png 1x, images/ice-cream-2x.png 2x, images/ice-cream-3x.png 3x" class="galery__img ice-cream" alt="Нарисованное изображение с тарелкой мороженого с топпингами. Десерту дорисовали улыбку" loading="lazy">
-
-            <img src="images/tape.png" srcset="images/tape-1x.png 1x, images/tape-2x.png 2x, images/tape-3x.png 3x" class="galery__img type" alt="Нарисованное изображение с аудиокассетой на которую наведен курсор. Имеются декоротивные элементы в виде загрузки, папки и плеера." loading="lazy">
-
-            <img src="images/books.png" srcset="images/books-1x.png 1x, images/books-2x.png 2x, images/books-3x.png 3x" class="galery__img books" alt="Нарисованное изображение с книгами жанров на любой вкус. Сверху стоит чашка, на которой написано: 'читай больше'" loading="lazy">
-
-            <img src="images/street.png" srcset="images/street-1x.png 1x, images/street-2x.png 2x, images/street-3x.png 3x" class="galery__img street" alt="Нарисованное изображение с пустой японской улицей. По обе стороны имеются дома с вывеской, на которой иероглифы" loading="lazy">
-            
-        </div>
+      <h2 class="title-decor title-decor-no-margin">А можно в картинках?</h2>
+      <div class="galery__wrapper">
+        <img src="images/sunset.png" srcset="images/sunset-1x.png 1x, images/sunset-2x.png 2x, images/sunset-3x.png 3x" class="galery__img sunset" alt="Нарисованное изображение с водной гладью, за ней виднеются горы и восходящее солнце" loading="lazy">
+        <img src="images/ice-cream.png" srcset="images/ice-cream-1x.png 1x, images/ice-cream-2x.png 2x, images/ice-cream-3x.png 3x" class="galery__img ice-cream" alt="Нарисованное изображение с тарелкой мороженого с топпингами. Десерту дорисовали улыбку" loading="lazy">
+        <img src="images/tape.png" srcset="images/tape-1x.png 1x, images/tape-2x.png 2x, images/tape-3x.png 3x" class="galery__img type" alt="Нарисованное изображение с аудиокассетой на которую наведен курсор. Имеются декоротивные элементы в виде загрузки, папки и плеера." loading="lazy">
+        <img src="images/books.png" srcset="images/books-1x.png 1x, images/books-2x.png 2x, images/books-3x.png 3x" class="galery__img books" alt="Нарисованное изображение с книгами жанров на любой вкус. Сверху стоит чашка, на которой написано: 'читай больше'" loading="lazy">
+        <img src="images/street.png" srcset="images/street-1x.png 1x, images/street-2x.png 2x, images/street-3x.png 3x" class="galery__img street" alt="Нарисованное изображение с пустой японской улицей. По обе стороны имеются дома с вывеской, на которой иероглифы" loading="lazy">
+      </div>
     </section>
-
   </main>
-
   <footer class="footer decorated-zone">
     <h2 class="footer__title main-title">focus</h2>
   </footer>
-
     <script src="./scripts/script.js"></script>
   </body>
 </html>
