Исправлены отступы у заголовков, изменены названия классов у светлой и темной темы

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2 class="section-title">Почему сосредоточиться так сложно</h2>
         <div class="section__wrapper">
           <article class="section__block">
-            <h3 class="title-decor title-decor-no-margin">Многозадачность</h3>
+            <h3 class="title-decor">Многозадачность</h3>
             <p class="block-descr">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
               <a href="#" class="descr-link">выяснили</a>, 
@@ -99,7 +99,7 @@
     <section class="section">
       <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <div class="section__wrapper">
-        <h3 class="title-decor title-decor-no-margin">5 простых (на самом деле не очень) советов</h3>
+        <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
         <article class="section__block">
           <h4 class="title-decor title-decor-normal">Представьте небо и облака</h4>
           <p class="block-descr">
@@ -135,7 +135,7 @@
       </div>
     </section>
     <section class="section galery">
-      <h2 class="title-decor title-decor-no-margin">А можно в картинках?</h2>
+      <h2 class="title-decor">А можно в картинках?</h2>
       <div class="galery__wrapper">
         <img src="images/sunset.png" srcset="images/sunset-1x.png 1x, images/sunset-2x.png 2x, images/sunset-3x.png 3x" class="galery__img sunset" alt="Нарисованное изображение с водной гладью, за ней виднеются горы и восходящее солнце" loading="lazy">
         <img src="images/ice-cream.png" srcset="images/ice-cream-1x.png 1x, images/ice-cream-2x.png 2x, images/ice-cream-3x.png 3x" class="galery__img ice-cream" alt="Нарисованное изображение с тарелкой мороженого с топпингами. Десерту дорисовали улыбку" loading="lazy">
